# backsim

./: README.md  dummy_run.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
backsim/: __init__.py  broker.py  callbacks.py  engine.py  portfolio.py  strategy.py  universe.py
backsim/callback/: __init__.py  callback.py  callbacks.py
backsim/engine/: __init__.py  callbacks.py  engine.py
backsim/portfolio/: __init__.py  callbacks.py  models.py  portfolio.py
docs/: architecture.md
tests/: test_all.sh  test_backtester.py  test_broker.py  test_portfolio.py  test_strategy.py  test_universe.py
